Github, learn git, questions

--- a/austin-linux-meetup/git/index.html
+++ b/austin-linux-meetup/git/index.html
@@ -50,7 +50,7 @@
 						<h2>Distributed</h2>
 						<ul>
 							<li>
-								Complete local repository
+								Every repository is a complete copy
 								<ul>
 									<li>Everyone has a backup of all your code</li>
 									<li>Commands are super fast</li>
@@ -167,20 +167,76 @@ Bisecting: 3 revisions left to test after this (roughly 2 steps)</code></pre></p
 				</section>
 
 				<section>
+					<h2><img class="octocat" style="margin: 0; padding: 0; vertical-align: bottom; height: 75px;" /> Github</h2>
+					<ul style="width: 8;%; float: left;">
+						<li>Hosted Git</li>
+						<li>
+							Features
+							<ul>
+								<li>Repo browser</li>
+								<li>Issues</li>
+								<li>Wiki</li>
+								<li>Network/Graphs</li>
+								<li><b>Pull requests</b></li>
+								<li>Github pages</li>
+								<li>Online editor</li>
+							</ul>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<i>The</i> place for Open Source
+							<ul>
+								<li><a href="https://github.com/twitter/bootstrap">Bootsrap</a></li>
+								<li><a href="https://github.com/rails/rails">Ruby on Rails</a></li>
+								<li><a href="https://github.com/joyent/node">Node</a></li>
+								<li><a href="https://github.com/symfony/symfony">Symfony</a></li>
+								<li><a href="https://github.com/hakimel/reveal.js">reveal.js</a></li>
+								<li>much more...</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+
+				<section>
 					<section>
-						<h2><img class="octocat" style="margin: 0; padding: 0; vertical-align: bottom; height: 75px;" /> Github</h2>
+						<h2>Learning Git</h2>
+						<h3>Basic Commands</h3>
+						<pre><code>git init
+git add .
+git status
+git commit -m 'first commit'
+git checkout -b feature-x
+git add newFile.txt
+git commit -m 'Added feature x'
+git checkout master
+git pull origin master
+git merge feature-x
+git push origin master</code></pre>
+					</section>
+					<section>
+						<h2>Resources</h2>
 						<ul style="width: 50%; float: left;">
-							<li>Hosted Git</li>
 							<li>
-								Features
+								Books
+									<ul>
+										<li><a href="http://git-scm.com/book">Pro Git</a> - Available free online</li>
+										<li>Pragmatic Guide to Git - Local author <a href="https://twitter.com/tswicegood">@tswicegood</a></li>
+										<li>Version Control with Git</li>
+									</ul>
+							</li>
+							<li>Man pages <pre><code>git help &lt;command&gt;</code></pre></li>
+						</ul>
+						<ul>
+							<li>
+								Tutorials
 								<ul>
-									<li>Repo browser</li>
-									<li>Issues</li>
-									<li>Wiki</li>
-									<li>Network/Graphs</li>
-									<li><b>Pull requests</b></li>
-									<li>Github pages</li>
-									<li>Online editor</li>
+									<li><a href="http://gitimmersion.com/">Git Immersion</a></li>
+									<li><a href="http://gitready.com/">Git Ready</a></li>
+									<li><a href="http://gitref.org/">Git Reference</a></li>
+									<li><a href="http://marklodato.github.com/visual-git-guide/index-en.html">Visual Git Guide</a></li>
+									<li><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/">Git Magic</a></li>
+									<li><a href="http://pcottle.github.com/learnGitBranching/">Learn Git Branching</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -188,23 +244,13 @@ Bisecting: 3 revisions left to test after this (roughly 2 steps)</code></pre></p
 				</section>
 
 				<section>
-					<p>distributed
-  work locally/offline
-branching
-git rebase
-git bisect
-github
-  pull requests
-  service hooks
-    auto deploy
-    continuous integration
-git hooks
-where to learn
-  basic commands
-  working dir/staging/repo
-  books
-  websites
-  man pages</p>
+					<h2>Questions?</h2>
+					<p>
+						Brandon Williams<br />
+						<a href="https://twitter.com/rocketeerbkw">@rocketeerbkw</a><br />
+						<a href="mailto:rocketeerbkw@gmail.com">rocketeerbkw@gmail.com</a><br />
+						<a href="http://rocketeerbkw.com">rocketeerbkw.com</a>						
+					</p>
 				</section>
 
 				<section>
