--- a/austin-linux-meetup/git/index.html
+++ b/austin-linux-meetup/git/index.html
@@ -4,10 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
-
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<title>Git | Austin Linux Meetup</title>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -271,10 +268,8 @@ git push origin master</code></pre>
 				dependencies: [
 					{ src: '../../reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
 					{ src: '../../reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../../reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
 					{ src: '../../js/jquery-1.9.1.min.js', async: true },
 					{ src: '../../js/octodex.js', async: true, callback: function() { octodex.init('.octocat', 100); } }
-					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
