Preface, moar github, misc

--- a/austin-linux-meetup/git/index.html
+++ b/austin-linux-meetup/git/index.html
@@ -43,6 +43,11 @@
 				</section>
 
 				<section>
+					<h2>Preface</h2>
+					<p>Unfortunately there's not enough time to teach you git, but maybe I can persuade you to siwtch anyway.</p>
+				</section>
+
+				<section>
 					<section>
 						<h2>Distributed</h2>
 						<ul>
@@ -136,6 +141,7 @@
 # git bisect bad HEAD
 
 Bisecting: 3 revisions left to test after this (roughly 2 steps)</code></pre></p>
+						<p>Demo if time (remind me!)</p>
 					</section>
 					<section>
 						<h2>Git Hooks</h2>
@@ -164,35 +170,75 @@ Bisecting: 3 revisions left to test after this (roughly 2 steps)</code></pre></p
 				</section>
 
 				<section>
-					<h2><img class="octocat" style="margin: 0; padding: 0; vertical-align: bottom; height: 75px;" /> Github</h2>
-					<ul style="width: 8;%; float: left;">
-						<li>Hosted Git</li>
-						<li>
-							Features
-							<ul>
-								<li>Repo browser</li>
-								<li>Issues</li>
-								<li>Wiki</li>
-								<li>Network/Graphs</li>
-								<li><b>Pull requests</b></li>
-								<li>Github pages</li>
-								<li>Online editor</li>
-							</ul>
-						</li>
-					</ul>
-					<ul>
-						<li>
-							<i>The</i> place for Open Source
-							<ul>
-								<li><a href="https://github.com/twitter/bootstrap">Bootsrap</a></li>
-								<li><a href="https://github.com/rails/rails">Ruby on Rails</a></li>
-								<li><a href="https://github.com/joyent/node">Node</a></li>
-								<li><a href="https://github.com/symfony/symfony">Symfony</a></li>
-								<li><a href="https://github.com/hakimel/reveal.js">reveal.js</a></li>
-								<li>much more...</li>
-							</ul>
-						</li>
-					</ul>
+					<section>
+						<h2><img class="octocat" style="margin: 0; padding: 0; vertical-align: bottom; height: 75px;" /> Github</h2>
+						<ul style="width: 8;%; float: left;">
+							<li>Hosted Git</li>
+							<li>
+								Features
+								<ul>
+									<li>Repo browser</li>
+									<li>Issues</li>
+									<li>Wiki</li>
+									<li>Network/Graphs</li>
+									<li><b>Pull requests</b></li>
+									<li>Github pages</li>
+									<li><b>Online editor</b></li>
+								</ul>
+							</li>
+						</ul>
+						<ul>
+							<li>
+								<i>The</i> place for Open Source
+								<ul>
+									<li><a href="https://github.com/twitter/bootstrap">Bootsrap</a></li>
+									<li><a href="https://github.com/rails/rails">Ruby on Rails</a></li>
+									<li><a href="https://github.com/joyent/node">Node</a></li>
+									<li><a href="https://github.com/symfony/symfony">Symfony</a></li>
+									<li><a href="https://github.com/hakimel/reveal.js">reveal.js</a></li>
+									<li>much more...</li>
+								</ul>
+							</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Service Hooks</h2>
+						<ul>
+							<li>
+								Web Hook
+								<ul>
+									<li>Ping URL when pushing to GitHub</li>
+									<li>Continuous ingegration</li>
+									<li>Automated deploys</li>
+								</ul>
+							</li>
+							<li>Basecamp</li>
+							<li>Bugzilla</li>
+							<li>Campfire</li>
+							<li>Email</li>
+							<li>Fisheye</li>
+							<li>IRC</li>
+							<li>Jabber</li>
+							<li><a href="https://github.com/github/github-services">much more...</a></li>
+					</section>
+					<section>
+						<h2>Alternatives</h2>
+						<ul>
+							<li><a href="https://bitbucket.org/">BitBucket</a></li>
+							<li>
+								Gitosis/Gitolite
+								<ul>
+									<li>Access control for bare repositories on a server</li>
+								</ul>
+							</li>
+							<li>
+								Gitweb
+								<ul>
+									<li>Web based repo browser</li>
+								</ul>
+							</li>
+						</ul>
+					</section>
 				</section>
 
 				<section>
@@ -238,6 +284,35 @@ git push origin master</code></pre>
 							</li>
 						</ul>
 					</section>
+				</section>
+
+				<section>
+					<h2>MISC</h2>
+					<ul style="width: 55%; float: left;">
+						<li><a href="http://git-scm.com/about/info-assurance">Cryptographically secure</a></li>
+						<li>Commits: <q>Take chances, make mistakes, get messy!</q></li>
+						<li>git (log|diff|stash|blame|tag|svn)</li>
+						<li><a href="http://mercurial.selenic.com/">Mercurial</a> (Hg)</li>
+						<li>
+							Links
+							<ul>
+								<li></li>
+							</ul>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							GUI
+							<ul>
+								<li><a href="https://code.google.com/p/tortoisegit/">Tortoise Git</a>  (Win)</li>
+								<li><a href="http://www.git-tower.com/">Git Tower</a>  (Mac)</li>
+								<li>Github (<a href="http://windows.github.com/">Win</a>) (<a href="http://mac.github.com/">Mac</a>)</li>
+								<li><a href="https://www.kernel.org/pub/software/scm/git/docs/gitk.html">Gitk</a>/<a href="https://www.kernel.org/pub/software/scm/git/docs/git-gui.html">Git Gui</a> (All)</li>
+								<li><a href="http://www.syntevo.com/smartgithg/index.html">Smart Git</a> (All)</li>
+								<li><a href="http://git-scm.com/downloads/guis">more...</a></li>
+							</ul>
+						</li>
+					</ul>
 				</section>
 
 				<section>
