Add more merge strategies, move around some links

--- a/austin-linux-meetup/git/index.html
+++ b/austin-linux-meetup/git/index.html
@@ -103,6 +103,8 @@
 									<li>Fast-Forward</li>
 									<li>Recursive</li>
 									<li>Rebase</li>
+									<li>Octopus</li>
+									<li>Subtree</li>
 								</ul>
 							</li>
 						</ul>
@@ -276,8 +278,6 @@ git push origin master</code></pre>
 								<ul>
 									<li><a href="http://gitimmersion.com/">Git Immersion</a></li>
 									<li><a href="http://gitready.com/">Git Ready</a></li>
-									<li><a href="http://gitref.org/">Git Reference</a></li>
-									<li><a href="http://marklodato.github.com/visual-git-guide/index-en.html">Visual Git Guide</a></li>
 									<li><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/">Git Magic</a></li>
 									<li><a href="http://pcottle.github.com/learnGitBranching/">Learn Git Branching</a></li>
 								</ul>
@@ -296,7 +296,10 @@ git push origin master</code></pre>
 						<li>
 							Links
 							<ul>
-								<li></li>
+								<li><a href="http://ndpsoftware.com/git-cheatsheet.html">Git Cheatsheet</a></li>
+								<li><a href="http://gitref.org/">Git Reference</a></li>
+								<li><a href="http://marklodato.github.com/visual-git-guide/index-en.html">Visual Git Guide</a></li>
+								<li>Git (<a href="http://git-scm.com/documentation/external-links">Un</a>)<a href="http://git-scm.com/documentation">official</a> Docs</li>
 							</ul>
 						</li>
 					</ul>
