Fix paths to resources

--- a/austin-linux-meetup/raspberry-pi/index.html
+++ b/austin-linux-meetup/raspberry-pi/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Raspberry Pi Presentation</title>
 
-    <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="../../reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="../../reveal.js/css/theme/default.css" id="theme">
 
     <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="css/zenburn.css">
+    <link rel="stylesheet" href="../../reveal.js/lib/css/zenburn.css">
 
     <style type="text/css">
       section .block {
@@ -270,7 +270,7 @@ int main (void)
       </div>
     </div>
 
-    <script src="js/reveal.js"></script>
+    <script src="../../reveal.js/js/reveal.js"></script>
     <script>
       Reveal.initialize({
         controls: true,
