--- a/austin-linux-meetup/git/index.html
+++ b/austin-linux-meetup/git/index.html
@@ -23,7 +23,7 @@
 		</script>
 
 		<!--[if lt IE 9]>
-		<script src="../../reveal.js/l../../reveal.js/html5shiv.js"></script>
+		<script src="../../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
