Add some more suggested modules

--- a/austin-drupal-newbie-meetup/drupal-from-scratch-2/index.html
+++ b/austin-drupal-newbie-meetup/drupal-from-scratch-2/index.html
@@ -180,6 +180,9 @@
               <li>Path Auto</li>
               <li>SEO Checklist</li>
               <li>Views</li>
+              <li>WYWIWYG</li>
+              <li>IMCE</li>
+              <li>Webform</li>
             </ul> 
           </section>
         </section>
