Add some advice for installation and configuration

--- a/texas-linux-fest/raspberry-pi/index.html
+++ b/texas-linux-fest/raspberry-pi/index.html
@@ -169,6 +169,7 @@ umount /dev/sdd1
 dd bs=4M if=~/2012-12-16-wheezy-raspbian.img of=/dev/sdd
 sudo sync</code></pre>
               </ul>
+              <div class="advice">BerryBoot is<br>kind of awesome</div>
             </section>
             <section>
               <h3>Configure</h3>
@@ -191,6 +192,7 @@ sudo sync</code></pre>
                   </li>
                 </ul>
               </div>
+              <div class="advice">RTFM</div>
             </section>
         </section>
         <section>
