--- a/texas-linux-fest/raspberry-pi/index.html
+++ b/texas-linux-fest/raspberry-pi/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Raspberry Pi Presentation</title>
+    <title>TXLF 2013 Raspberry Pi Lightning Talk</title>
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="../../reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="../../reveal.js/css/theme/default.css" id="theme">
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="../../reveal.js/lib/css/zenburn.css">
+
+    <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+    <script>
+      document.write( '<link rel="stylesheet" href="../../reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+    </script>
+
+    <!--[if lt IE 9]>
+    <script src="../../reveal.js/lib/js/html5shiv.js"></script>
+    <![endif]-->
 
     <style type="text/css">
       section .block {
