Fix directory index files

--- a/austin-drupal-users-group/index.html
+++ b/austin-drupal-users-group/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-  <title>Index of /austin-drupal-users-group</title>
+  <title>Index of /slides/austin-drupal-users-group</title>
 </head>
 <body>
-  <h1>Index of /austin-drupal-users-group</h1>
+  <h1>Index of /slides/austin-drupal-users-group</h1>
   <table>
     <tr>
       <th valign="top"><img src="../icons/blank.gif" alt="[ICO]"></th>
-      <th><a href="?C=N;O=D">Name</a></th>
+      <th>Name</th>
     </tr>
     <tr>
       <th colspan="2"><hr></th>
     </tr>
     <tr>
       <td valign="top"><img src="../icons/back.gif" alt="[PARENTDIR]"></td>
-      <td><a href="/">Parent Directory</a></td>
+      <td><a href="../">Parent Directory</a></td>
     </tr>
     <tr>
       <td valign="top"><img src="../icons/folder.gif" alt="[DIR]"></td>
