--- a/austin-drupal-users-group/index.html
+++ b/austin-drupal-users-group/index.html
@@ -22,6 +22,10 @@
       <td><a href="developing-for-d8-isnt-hard/">developing-for-d8-isnt-hard/</a></td>
     </tr>
     <tr>
+      <td valign="top"><img src="../icons/folder.gif" alt="[DIR]"></td>
+      <td><a href="migrating-to-drupal-8/">migrating-to-drupal-8/</a></td>
+    </tr>
+    <tr>
       <th colspan="2"><hr></th>
     </tr>
   </table>
