--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </tr>
     <tr>
       <td valign="top"><img src="icons/folder.gif" alt="[DIR]"></td>
+      <td><a href="reactsa/">reactsa/</a></td>
+    </tr>
+    <tr>
+      <td valign="top"><img src="icons/folder.gif" alt="[DIR]"></td>
       <td><a href="texas-linux-fest/">texas-linux-fest/</a></td>
     </tr>
     <tr>
