Add slides for DrupalCamp DEN - No-code API integrations with ECA and HTTP Client Manager

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     </tr>
     <tr>
       <td valign="top"><img src="icons/folder.gif" alt="[DIR]"></td>
+      <td><a href="drupal-camp-den/">drupal-camp-den/</a></td>
+    </tr>
+    <tr>
+      <td valign="top"><img src="icons/folder.gif" alt="[DIR]"></td>
       <td><a href="drupalcon/">drupalcon/</a></td>
     </tr>
     <tr>
@@ -54,5 +58,3 @@
     </tr>
   </table>
 </body></html>
-
-
